- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5615] Rename tx_seminars_registrationmanager to Tx_Seminars_Service_RegistrationManager
- [#5616] Rename tx_seminars_registration to Tx_Seminars_OldModel_Registration
- [#5614] Rename tx_seminars_seminar to Tx_Seminars_OldModel_Event
- [#5613] Rename tx_seminars_speaker to Tx_Seminars_OldModel_Speaker
- [#5611] Rename tx_seminars_timeslot to Tx_Seminars_OldModel_TimeSlot
- [#5610] Rename tx_seminars_timespan to Tx_Seminars_OldModel_AbstractTimeSpan
- [#5618] Rename tx_seminars_flexForms to Tx_Seminars_FlexForms
- [#5590] Rename tx_seminars_Model_Event to Tx_Seminars_Model_Event
- [#5609] Rename tx_seminars_ViewHelper_TimeRange to Tx_Seminars_ViewHelper_TimeRange
- [#5608] Rename tx_seminars_ViewHelper_DateRange to Tx_Seminars_ViewHelper_DateRange
- [#5607] Rename tx_seminars_ViewHelper_Countdown to Tx_Seminars_ViewHelper_Countdown
- [#5605] Rename tx_seminars_ViewHelper_CommaSeparatedTitles to Tx_Seminars_ViewHelper_CommaSeparatedTitles
- [#5606] Rename tx_seminars_Service_SingleViewLinkBuilder to Tx_Seminars_Service_SingleViewLinkBuilder
- [#5604] Rename tx_seminars_OldModel_Organizer to Tx_Seminars_OldModel_Organizer
- [#5603] Rename tx_seminars_OldModel_Category to Tx_Seminars_OldModel_Category
- [#5601] Rename tx_seminars_Model_TimeSlot to Tx_Seminars_Model_TimeSlot
- [#5600] Rename tx_seminars_Model_TargetGroup to Tx_Seminars_Model_TargetGroup
- [#5599] Rename tx_seminars_Model_Speaker to Tx_Seminars_Model_Speaker
- [#5598] Rename tx_seminars_Model_Skill to Tx_Seminars_Model_Skill
- [#5597] Rename tx_seminars_Model_Registration to Tx_Seminars_Model_Registration